serve static resource from tmp dir